Moved dashboard-specific navigation Sass into global navigation Sass to prevent animation flicker

--- a/app/assets/stylesheets/partials/_navigation.sass
+++ b/app/assets/stylesheets/partials/_navigation.sass
@@ -1,57 +1,66 @@
 $nav-height: 55px
-
 nav
     background: white
-    // box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.38)
     box-shadow: 0px 0px 16px -5px rgb(0, 0, 0)
 
-    // height: $nav-height
+    #primary-banner
+        background: inherit
 
-    // position: relative
-    &.fixed
-        position: fixed
-        left: 0
-        right: 0
-        top: 0
+        .min-container#navigation
+            position: relative
 
-    .container
-        position: relative
-
-        a:not(.button)
-            display: inline-block
-            line-height: $nav-height
-            padding: 0 1rem
-            color: #b4e7ff
-
-            &:hover
-                color: white
-
-            &.title
-                font-size: 1.8rem
-                font-weight: bold
-                color: #0b71a0
-                float: left
+            a:not(.button)
+                display: inline-block
+                line-height: $nav-height
+                padding: 0 1rem
+                // color: #b4e7ff
+                color: $darkb-accent
+                font-weight: bolder
 
                 &:hover
-                    color: #004565
+                    color: white
 
-            &.right
-                float: right
-
-            &#profile
-                img
-                    display: inline-block
-                    height: $nav-height
-                    padding: 11px 1px
-                    border-radius: 50%
+                &.title
+                    font-size: 1.8rem
+                    font-weight: bold
+                    // color: #0b71a0
+                    color: $darkb-accent
                     float: left
 
-                span
-                    font-size: 13px
-                    color: #0070a5
-                    display: inline-block
+                    &:hover
+                        color: #004565
 
-                &:hover span
-                    color: #004565
+                &.right
+                    float: right
 
-        @import 'partials/profile_modal'
+                &#profile
+                    img
+                        display: inline-block
+                        height: $nav-height
+                        padding: 11px 1px
+                        border-radius: 50%
+                        float: left
+
+                    span
+                        font-size: 13px
+                        color: #0070a5
+                        display: inline-block
+
+                    &:hover span
+                        color: #004565
+
+            @import 'partials/profile_modal'
+
+    #sub-banner
+        background: $bg-gradient
+
+        > .min-container
+            padding: 1rem
+
+            h1.page-title
+                margin: 0
+                color: $darkb-accent
+                font-family: Roboto
+                font-size: 1.1rem
+                text-transform: uppercase
+                font-weight: 100
